syntax = "proto3";

package orders;

import "google/protobuf/timestamp.proto";

option go_package = "order-service/internal/delivery/proto/order_status_changed;proto";

message OrderStatusChangedEvent {
  string message_id = 1;
  string order_id   = 2;
  string user_id    = 3;

  OrderStatus status = 4;

  optional string cancellation_reason = 5;

  google.protobuf.Timestamp created_at = 6;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;

  ORDER_STATUS_PENDING     = 1;
  ORDER_STATUS_PAID        = 2;
  ORDER_STATUS_CANCELED    = 3;
  ORDER_STATUS_ASSEMBLING  = 4;
  ORDER_STATUS_ASSEMBLED   = 5;
  ORDER_STATUS_DELIVERING  = 6;
  ORDER_STATUS_ISSUED      = 7;
}